Remove links to generic pages of companies that also promote non-free software, as required by RMS.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -29,16 +29,15 @@ GCC 3.0.4 has been released.
 
 <dt><b>February 9, 2002</b></dt>
 <dd>
-Alexandre Oliva, of <a href="http://www.redhat.com/">Red Hat,
-Inc.</a>, has contributed a port to the SuperH SH5 64-bit RISC
+Alexandre Oliva, of Red Hat,
+Inc., has contributed a port to the SuperH SH5 64-bit RISC
 microprocessor architecture, extending the existing SH port.
 </dd>
 
 <dt><b>January 24, 2002</b></dt>
 <dd>
-<a href="http://www.tensilica.com/">Tensilica</a> has contributed 
-a port to the configurable and extensible
-<a href="http://www.tensilica.com/technology.html">Xtensa microprocessor
+Tensilica has contributed a port to the configurable and extensible <a
+href="http://www.tensilica.com/technology.html">Xtensa microprocessor
 architecture</a>.
 </dd>
 
@@ -53,10 +52,10 @@ implementations.
 
 <dt><b>January 8, 2002</b></dt>
 <dd>
- <a href="http://www.suse.com">SuSE Labs</a> developers Jan Hubicka, Bo
- Thorsen and Andreas Jaeger have contributed a port to the AMD x86-64
- architecture.  For more information on x86-64 see <a
- href="http://www.x86-64.org">http://www.x86-64.org</a>.
+SuSE Labs developers Jan Hubicka, Bo Thorsen and Andreas Jaeger have
+contributed a port to the AMD x86-64 architecture.  For more
+information on x86-64 see <a
+href="http://www.x86-64.org">http://www.x86-64.org</a>.
 </dd>
 
 <dt><b>December 20, 2001</b></dt>
@@ -79,10 +78,9 @@ GCC 3.0.2 has been released.
 
 <dt><b>October 11, 2001</b></dt>
 <dd>
-<a href="http://www.axis.com/">Axis Communications</a> has contributed 
-its port to the CRIS CPU architecture, used in the ETRAX
-system-on-a-chip series.  See
-<a href="http://developer.axis.com/">developer.axis.com</a> for technical
+Axis Communications has contributed its port to the CRIS CPU
+architecture, used in the ETRAX system-on-a-chip series.  See <a
+href="http://developer.axis.com/">developer.axis.com</a> for technical
 information.
 </dd>
 
@@ -95,7 +93,7 @@ in the C front end too.
 
 <dt><b>October 2, 2001</b></dt>
 <dd>
-<a href="http://www.gnat.com/">Ada Core Technologies, Inc</a>, has contributed 
+Ada Core Technologies, Inc, has contributed 
 its GNAT Ada 95 front end and associated tools. The GNAT compiler fully 
 implements the Ada language as defined by the ISO/IEC 8652 standard. 
 </dd>
@@ -353,9 +351,8 @@ and numerous embedded LIW and DSP parts.</p>
 
 <dt><b>March 22, 2000</b></dt>
 <dd>
-The Steering Committee has appointed Mark Mitchell, of <a
-href="http://www.codesourcery.com">CodeSourcery, LLC</a>, to manage the
-GCC 3.0 release and as a new Steering Committe member.
+The Steering Committee has appointed Mark Mitchell, of CodeSourcery, LLC,
+to manage the GCC 3.0 release and as a new Steering Committee member.
 CodeSourcery will be providing time from Mark, Alex Samuel, and other
 personnel, to manage the release.  Thanks!
 <p>
@@ -765,7 +762,7 @@ Bernd Schmidt donates <a href="news/spill.html">localized spilling support</a>.
 
 <dt><b>September 22, 1998</b></dt>
 <dd>
-<a href="http://www.ibm.com/">IBM Corporation</a> delivers an update
+IBM Corporation delivers an update
 to the IBM Haifa <a href="news/scheduler.ps">instruction scheduler</a> and
 new <a href="news/pipelining.ps">software pipelining and branch
 optimization</a> support.
