Fix a typo and one phrase.  Make it clear, in which respect GCC 3.2 is incompatible wrt. earlier releases.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -16,9 +16,10 @@
   <ul>
     <li>This GCC release is based on the GCC 3.1 sourcebase, and thus has
     all the <a href="../gcc-3.1/changes.html">changes in the GCC 3.1 series</a>.
-    In addition, GCC 3.1 has a number of C++ ABI fixes in it which make its C++
-    compiler binary incompatible with the C++ compilers found in earlier GCC
-    releases, including GCC 3.1 and GCC 3.1.1.</li>
+    In addition, GCC 3.2 has a number of C++ ABI fixes which make its
+    C++ compiler generate binary code which is incompatible with the C++
+    compilers found in earlier GCC releases, including GCC 3.1 and
+    GCC 3.1.1.</li>
   </ul>
 
 
