Document "may_alias" attribute. By Dan Nicolaescu <dann@godzilla.ics.uci.edu>.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -96,6 +96,13 @@
 	requiring a non-null value.  The compiler currently uses this
 	information to issue a warning when it detects a null value passed
 	in such an argument slot.</li>
+
+    <li>A new type attribute,
+        <code><a name="may_alias">may_alias</a></code>, has been added.
+        Accesses to objects with types with this attribute are not
+        subjected to type-based alias analysis, but are instead assumed to
+        be able to alias any other type of objects, just like the 
+        <code>char</code> type.</li>
   </ul>
 
 <h3>C++</h3>
