Another markup fix (from an earlier patch).

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -170,7 +170,7 @@
   <ul>
     <li>Matsushita MN10200, <code>mn10200-*-*</code></li>
     <li>Motorola 88000, <code>m88k-*-*</code></li>
-    <li>IBM ROMP, <code>romp-*-*</code>
+    <li>IBM ROMP, <code>romp-*-*</code></li>
   </ul>
 
   <p>Also, some individual systems have been obsoleted:</p>
