Add description of MIPS command-line changes.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -155,6 +155,27 @@
 	  <li>SH5, SHmedia, little-endian, 64-bit default,
 	      <code>sh64le-*-netbsd*</code></li>
 	</ul></li>
+    <li>The following changes have been made to the MIPS port:
+	<ul>
+	  <li>All configurations now accept the <code>-mabi</code>
+	      switch.  Note that you will need appropriate multilibs
+	      for this option to work properly.</li>
+	  <li>ELF configurations will always pass an ABI flag to
+	      the assembler, except when the MIPS EABI is selected.</li>
+	  <li><code>-mabi=64</code> no longer selects MIPS IV code.</li>
+	  <li>The <code>-mcpu</code> option, which was deprecated
+	      in 3.1 and 3.2, has been removed from this release.</li>
+	  <li><code>-march</code> now changes the core ISA level.
+	      In previous releases, it would change the use of
+	      processor-specific extensions, but would leave the core
+	      ISA unchanged.  For example, <code>mips64-elf
+	      -march=r8000</code> will now generate MIPS IV code.</li>
+	  <li>Under most configurations, <code>-mipsN</code> now acts as a
+	      synonym for <code>-march</code>.</li>
+	  <li>There are some new preprocessor macros to describe the
+	      <code>-march</code> and <code>-mtune</code> settings.
+	      See the documentation of those options for details.</li>
+	</ul></li>
   </ul>
 
 
