* index.html: Add a note about the SH port.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -74,6 +74,13 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>July 25, 2002</b>
+</td><td>
+Kaz Kojima has implemented the necessary support in FFI and libjava
+to get libgcj running on SH-3/4.
+</td></tr>
+
+<tr><td valign="top">
 <b>July 19, 2002</b>
 </td><td>
 Bo Thorsen, SuSE Labs, has implemented the necessary support in FFI,
