--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -14,7 +14,7 @@
 
 <!-- Changes for later point releases should be added at the top. -->
 
-<h2>Additional changes (that will be) in GCC 3.1.1</h2>
+<h2>Additional changes in GCC 3.1.1</h2>
 
 <ul>
 <li>A bug related to how structures and unions are returned has been
@@ -28,6 +28,8 @@
 <li>Nested functions have been fixed for <code>mips*-*-netbsd*</code>.</li>
 <li>Some missing floating point support routines have beed added for
     <code>mips*-*-netbsd*</code>.</li>
+<li>This <a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01208.html">message</a>
+    gives additional information about the bugs fixed in this release.</li>
 </ul>
 
 
