--- a/htdocs/gcc-3.1/index.html
+++ b/htdocs/gcc-3.1/index.html
@@ -8,6 +8,13 @@
 
 <h1>GCC 3.1</h1>
 
+<p>July 27, 2002</p>
+
+<p>The <a href="http://www.gnu.org/">GNU project</a> and the GCC
+developers are pleased to announce the release of GCC 3.1.1.</p>
+
+<p>The links below still apply to GCC 3.1.1.</p>
+
 <p>May 15, 2002</p>
 
 <p>The <a href="http://www.gnu.org/">GNU project</a> and the GCC
