Fix two broken links, which only appeared as such on www.gnu.org.

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -85,10 +85,10 @@ value="g/a|g/bu|g/c|g/d|g/e|g/f|g/g|g/h|g/i|g/j|g/l|g/mi|g/n|g/p|g/r|g/s|g/ti|g/
 Documentation
 </a>&nbsp;
 <input type="checkbox" name="restrict" value="g/te" />
-<a href="testresults/">
+<a href="http://gcc.gnu.org/testresults/">
 Test results</a>&nbsp;
 <input type="checkbox" name="restrict" value="g/be" />
-<a href="benchresults/">
+<a href="http://gcc.gnu.org/benchresults/">
 Benchmark results</a>
 <br />
 <p>
