--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -32,20 +32,20 @@ the EGCS sources; the other version number identified EGCS releases (as
 opposed to development snapshots).</p>
 
 <table border="1" cellspacing="0" cellpadding="5">
-<tr><th>Release Name</th><th>Version number</th><th>Release date</th></tr>
+<tr><th>Release</th><th>internal version</th><th>Release date</th></tr>
 
-<tr><td><a href="gcc-3.1/">GCC 3.1</a></td><td>3.1.1</td> <td>July 26, 2002</td></tr>
-<tr><td><a href="gcc-3.1/">GCC 3.1</a></td><td>3.1</td> <td>May 15, 2002</td></tr>
-<tr><td><a href="gcc-3.0/">GCC 3.0.4</a></td><td>3.0.4</td> <td>February 20, 2002</td></tr>
-<tr><td><a href="gcc-3.0/">GCC 3.0.3</a></td><td>3.0.3</td> <td>December 20, 2001</td></tr>
-<tr><td><a href="gcc-3.0/">GCC 3.0.2</a></td><td>3.0.2</td> <td>October 25, 2001</td></tr>
-<tr><td><a href="gcc-3.0/">GCC 3.0.1</a></td><td>3.0.1</td> <td>August 20, 2001</td></tr>
-<tr><td><a href="gcc-3.0/">GCC 3.0</a></td><td>3.0</td> <td>June 18, 2001</td></tr>
+<tr><td><a href="gcc-3.1/">GCC 3.1.1</a></td> <td></td> <td>July 26, 2002</td></tr>
+<tr><td><a href="gcc-3.1/">GCC 3.1</a></td>   <td></td> <td>May 15, 2002</td></tr>
+<tr><td><a href="gcc-3.0/">GCC 3.0.4</a></td> <td></td> <td>February 20, 2002</td></tr>
+<tr><td><a href="gcc-3.0/">GCC 3.0.3</a></td> <td></td> <td>December 20, 2001</td></tr>
+<tr><td><a href="gcc-3.0/">GCC 3.0.2</a></td> <td></td> <td>October 25, 2001</td></tr>
+<tr><td><a href="gcc-3.0/">GCC 3.0.1</a></td> <td></td> <td>August 20, 2001</td></tr>
+<tr><td><a href="gcc-3.0/">GCC 3.0</a></td>   <td></td> <td>June 18, 2001</td></tr>
 
-<tr><td><a href="gcc-2.95/">GCC 2.95.3</a></td><td>2.95.3</td> <td>March 16, 2001</td></tr>
-<tr><td><a href="gcc-2.95/">GCC 2.95.2</a></td><td>2.95.2</td> <td>October 24, 1999</td></tr>
-<tr><td><a href="gcc-2.95/">GCC 2.95.1</a></td><td>2.95.1</td> <td>August 19, 1999</td></tr>
-<tr><td><a href="gcc-2.95/">GCC 2.95</a></td>  <td>2.95</td>   <td>July 31, 1999</td></tr>
+<tr><td><a href="gcc-2.95/">GCC 2.95.3</a></td> <td></td> <td>March 16, 2001</td></tr>
+<tr><td><a href="gcc-2.95/">GCC 2.95.2</a></td> <td></td> <td>October 24, 1999</td></tr>
+<tr><td><a href="gcc-2.95/">GCC 2.95.1</a></td> <td></td> <td>August 19, 1999</td></tr>
+<tr><td><a href="gcc-2.95/">GCC 2.95</a></td>   <td></td> <td>July 31, 1999</td></tr>
 
 <tr><td><a href="egcs-1.1/">EGCS 1.1.2</a></td><td>2.91.66</td><td>March 15, 1999</td></tr>
 <tr><td><a href="egcs-1.1/">EGCS 1.1.1</a></td><td>2.91.60</td><td>December 1, 1998</td></tr>
@@ -53,8 +53,10 @@ opposed to development snapshots).</p>
 
 <tr><td><a href="egcs-1.0/egcs-1.0.3.html">EGCS 1.0.3</a></td><td>2.90.29</td><td>May 15, 1998</td></tr>
 <tr><td><a href="egcs-1.0/egcs-1.0.2.html">EGCS 1.0.2</a></td><td>2.90.27</td><td>March 16, 1998</td></tr>
-<tr><td>gcc 2.8.1</td><td>2.8.1</td><td>March 2, 1998</td></tr>
-<tr><td>gcc 2.8.0</td><td>2.8.0</td><td>January 7, 1998</td></tr>
+
+<tr><td>gcc 2.8.1</td> <td></td> <td>March 2, 1998</td></tr>
+<tr><td>gcc 2.8.0</td> <td></td> <td>January 7, 1998</td></tr>
+
 <tr><td><a href="egcs-1.0/egcs-1.0.1.html">EGCS 1.0.1</a></td><td>2.90.23</td><td>January 6, 1998</td></tr>
 <tr><td><a href="egcs-1.0/egcs-1.0.html">EGCS 1.0</a></td><td>2.90.21</td><td>December 3, 1997</td></tr>
 
