Fix one link, make another local, and generally compress item 1 significantly.

--- a/htdocs/java/build-snapshot.html
+++ b/htdocs/java/build-snapshot.html
@@ -17,18 +17,8 @@
 <tr bgcolor="#cccccc">
 <td>
 <pre>
-General gcj download information can be found <a href="download.html">here</a>.
-
-1a. <a href="../snapshots.html">Get a GCC snapshot.</a>
-
-1b. Or get GCC from cvs, see
-
-  <a href="http://gcc.gnu.org/cvs.html">http://gcc.gnu.org/cvs.html</a>
-
-Where ever you get GCC from, you also get Libgcj. There is no need for
-you get Libgc from an other cvs or snapshot repository.
+1. <a href="../snapshots.html">Get a GCC snapshot</a> or <a href="../cvs.html">obtain GCC via CVS</a>.
 </pre>
-
 </td>
 </tr>
 
