Tweak the presentation of the status of our releases.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -148,14 +148,15 @@ and automated testers</a> to maintain and improve quality.</p>
 </dd>
 
 <dt><strong>Current release series:</strong>
-  <a href="gcc-3.1/">GCC 3.1</a>
+  <a href="gcc-3.1/">GCC 3.1.1</a>
 </dt><dd>
-  GCC 3.1.1 released 2002-07-26; this will be the last 3.1 release,
-  for the 3.1-branch will be renamed to 3.2.
+  GCC 3.1.1 (released 2002-07-26) is the last 3.1 release;
+  the 3.1-branch became the
+  <a href="gcc-3.2/changes.html3.2">GCC 3.2</a>-branch.
 </dd>
 
 <dt><strong>Pending release series:</strong>
-  <a href="gcc-3.2/changes.html">GCC 3.2</a> scheduled for 2002-07-2x
+  <a href="gcc-3.2/changes.html">GCC 3.2</a> scheduled for early August 2002
 </dt><dd>
   Changes require approval by release manager.
 </dd>
