--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -152,7 +152,7 @@ and automated testers</a> to maintain and improve quality.</p>
 </dt><dd>
   GCC 3.1.1 (released 2002-07-26) is the last 3.1 release;
   the 3.1-branch became the
-  <a href="gcc-3.2/changes.html3.2">GCC 3.2</a>-branch.
+  <a href="gcc-3.2/changes.html">GCC 3.2</a>-branch.
 </dd>
 
 <dt><strong>Pending release series:</strong>
