Clarify policy for adding write-after-approval people

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -123,7 +123,11 @@ developer to follow the appropriate policies.</p>
   fall into one of the two previous categories.  People with write
   after approval need to submit their patches to the list; once the
   patches have been approved by the appropriate maintainers the
-  patches may be checked into the GCC sources.</p></dd>
+  patches may be checked into the GCC sources.  The steering committee
+  or a well-established GCC maintainer (including, but not limited to
+  global write maintainers) can <a href="#authenticated">
+  approve for write access</a> any person with GNU copyright assignment
+  papers in place and known to submit good patches.</p></dd>
 </dl>
 
 <p>The list of folks with write access to the repository can be found
