--- a/htdocs/branching.html
+++ b/htdocs/branching.html
@@ -33,12 +33,10 @@ use the next major release number.  Also, update the version number in
 <code>java/gcj.texi</code> and <code>f/root.texi</code>.</li>
 
 <li>Create a new <code>gcc-<var>VERSION</var></code> directory in the
-<code>wwwstats</code> repository and populate it with initial
-copies of <code>buildstat.html</code>, <code>changes.html</code>, and
-<code>criteria.html</code></li>
-
-<li>Update <code>doc/install.texi</code> to reference the newly created
-<code>buildstat.html</code>.</li>
+<code>wwwdocs</code> repository and populate it with initial copies
+of <code>buildstat.html</code>, <code>changes.html</code>, and
+<code>criteria.html</code>.  Update the toplevel
+<code>buildstat.html</code> to refer to this version.</li>
 
 <li>Update <code>f/root.texi</code> on the branch to use <code>@clear
 DEVELOPMENT</code>.</li>
