Add build entries for 3.1.1:   alpha-dec-osf4.0g   hppa2.0w-hp-hpux11.00   i386-unknown-netbsdelf1.5.3   i586-pc-linux-gnu (k6) (Debian 3.0, glibc 2.2.5, kernel 2.2.19)   i586-pc-linux-gnu (k6) (Red Hat 7.0, glibc 2.2.4, kernel 2.4.18)   i686-pc-cygwin (Cygwin 1.3.12, Windows XP Pro 5.1)   i686-pc-linux-gnu (Debian GNU 3.0, glibc 2.2.5, kernel 2.2.20)   i686-pc-linux-gnu (Red Hat 7.3, glibc 2.2.5, kernel 2.4.19)   i686-pc-linux-gnu (Slackware (heavily modified), glibc 2.2.5, kernel 2.4.18)   i686-pc-linux-gnu (SuSE 8.0, glibc 2.2.5, kernel 2.4.18)   mips-sgi-irix6.5   sparc-sun-solaris2.8   sparc64-sun-solaris2.8   sparc64-unknown-linux-gnu (Debian GNU 3.0, glibc 2.2.5, kernel 2.4.18)   sparc64-unknown-linux-gnu (SuSE 7.3, glibc 2.2.4, kernel 2.4.14)
plus lots of test results for 3.1.1.

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -38,6 +38,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alpha-dec-osf4.0g</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77, Java; with tweaks):
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01368.html">3.1.1</a></td>
+</tr>
+
+<tr>
 <td>alpha-dec-osf5.1</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -59,6 +66,22 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01278.html">3.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00585.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>alphaev67-dec-osf4.0f</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00810.html">3.1.1</a>
+</td>
+</tr>
+
+<tr>
+<td>alphapca56-uknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00781.html">3.1.1</a>
 </td>
 </tr>
 
@@ -86,7 +109,23 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01326.html">3.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00593.html">3.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00586.html">3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00586.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00807.html">3.1.1</a>
+</td>
+</tr>
+
+<tr>
+<td>hppa2.0w-hp-hpux11.00</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01404.html">3.1.1</a></td>
+</tr>
+
+<tr>
+<td>hppa64-hp-hpux11.00</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00806.html">3.1.1</a>
 </td>
 </tr>
 
@@ -127,6 +166,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i386-unknown-freebsd4.6</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00754.html">3.1.1</a>
+</td>
+</tr>
+
+<tr>
 <td>i386-unknown-openbsd</td>
 <td>&nbsp;</td>
 <td>Successful (Ada, C, C++, F77, Java, Obj-C):
@@ -138,6 +185,27 @@ Installing GCC: Final Installation</a>.</p>
 <td>GNU as 1.92.3, openbsd ld</td>
 <td>Unsuccessful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01335.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i386-unknown-netbsdelf1.5.3</td>
+<td>NetBSD 1.5.3, binutils 2.11.2</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01333.html">3.1.1</a></td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu (k6)</td>
+<td>Debian 3.0, glibc 2.2.5, kernel 2.2.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01362.html">3.1.1</a></td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu (k6)</td>
+<td>Red Hat 7.0, glibc 2.2.4, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01328.html">3.1.1</a></td>
 </tr>
 
 <tr>
@@ -277,6 +345,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin 1.3.12, Windows XP Pro 5.1</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01288.html">3.1.1</a></td>
+</tr>
+
+<tr>
 <td>i686-pc-interix3</td>
 <td>Interix 3.0 on Windows XP</td>
 <td>Successful:
@@ -292,7 +367,10 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00575.html">3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00579.html">3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00580.html">3.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00592.html">3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00592.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00756.html">3.1.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00758.html">3.1.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00000.html">3.1.1</a>
 </td>
 </tr>
 
@@ -315,6 +393,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>Debian GNU 3.0, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful (C, C++, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01880.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Debian GNU 3.0, glibc 2.2.5, kernel 2.2.20</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01359.html">3.1.1</a></td>
 </tr>
 
 <tr>
@@ -403,9 +488,23 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01280.html">3.1.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Slackware 8.0, glibc 2.2.3, kernel 2.4.5</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01257.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Slackware (heavily modified), glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01286.html">3.1.1</a></td>
 </tr>
 
 <tr>
@@ -420,6 +519,16 @@ Installing GCC: Final Installation</a>.</p>
 <td>SuSE 7.3, glibc 2.2.4, kernel 2.4.18</td>
 <td>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02468.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE 8.0, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful: (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01294.html">3.1.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00737.html">3.1.1</a>
+</td>
 </tr>
 
 <tr>
@@ -443,7 +552,16 @@ Installing GCC: Final Installation</a>.</p>
 <td>ia64-suse-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00548.html">3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00548.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00744.html">3.1.1</a>
+</td>
+</tr>
+
+<tr>
+<td>ia64-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00805.html">3.1.1</a>
 </td>
 </tr>
 
@@ -461,7 +579,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>mips-sgi-irix6.2</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00632.html">3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00632.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00797.html">3.1.1</a>
 </td>
 </tr>
 
@@ -469,7 +588,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>mips-sgi-irix6.5</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00639.html">3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00639.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00783.html">3.1.1</a>
 </td>
 </tr>
 
@@ -477,7 +597,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>mips-sgi-irix6.5</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77, Java):
-<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01470.html">3.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01470.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01390.html">3.1.1</a></td>
 </tr>
 
 <tr>
@@ -627,7 +748,9 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.7</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00749.html">3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00749.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00803.html">3.1.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00008.html">3.1.1</a>
 </td>
 </tr>
 
@@ -639,7 +762,18 @@ Installing GCC: Final Installation</a>.</p>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00578.html">3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00621.html">3.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00633.html">3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00633.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00114.html">3.1.1</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.8</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01294.html">3.1.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00745.html">3.1.1</a>
 </td>
 </tr>
 
@@ -686,10 +820,38 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparc64-sun-solaris2.8</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01294.html">3.1.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00747.html">3.1.1</a>
+</td>
+</tr>
+
+<tr>
 <td>sparc64-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00577.html">3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00577.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00820.html">3.1.1</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc64-unknown-linux-gnu</td>
+<td>Debian GNU 3.0, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01285.html">3.1.1</a></td>
+</tr>
+
+<tr>
+<td>sparc64-unknown-linux-gnu</td>
+<td>SuSE 7.3, glibc 2.2.4, kernel 2.4.14</td>
+<td>Successful (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01294.html">3.1.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00739.html">3.1.1</a>
 </td>
 </tr>
 
