--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -430,6 +430,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i586-pc-linux-gnu</td>
+<td>Debian 2.2, glibc 2.1.3, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg00884.html">3.0.1</a></td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
 <td>Debian 3.0, glibc 2.2.5, kernel 2.2.19</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01385.html">3.0.4</a></td>
@@ -650,6 +657,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>Red Hat 6.0, glibc 2.1.3, kernel 2.4.16</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01273.html">3.0.4</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 6.1, glibc 2.2.4, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01135.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -1019,7 +1033,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>rs6000-ibm-aix4.3.2.0</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg01709.html">3.0.3</a></ltd>
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg01709.html">3.0.3</a></td>
 </tr>
 
 <tr>
