Change 3.1.1 entry from sparc64-unknown-linux-gnu to sparc-unknown-linux-gnu.

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -810,6 +810,15 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparc-unknown-linux-gnu</td>
+<td>SuSE 7.3, glibc 2.2.4, kernel 2.4.14</td>
+<td>Successful (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01294.html">3.1.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00739.html">3.1.1</a>
+</td>
+
+<tr>
 <td>sparc64-sun-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77, Java, Obj-C):
@@ -844,15 +853,6 @@ Installing GCC: Final Installation</a>.</p>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01285.html">3.1.1</a></td>
 </tr>
-
-<tr>
-<td>sparc64-unknown-linux-gnu</td>
-<td>SuSE 7.3, glibc 2.2.4, kernel 2.4.14</td>
-<td>Successful (C, C++, F77, Obj-C):
-<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01294.html">3.1.1</a>
-<br />Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00739.html">3.1.1</a>
-</td>
 </tr>
 
 </table>
