Give build information for a common C++ ABI and some notes on the ABI.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -31,7 +31,9 @@
 <h3>C++</h3>
 
   <ul>
-    <li>The C++ ABI now conforms to the V3 multi-vendor standard.</li>
+    <li>The C++ ABI now conforms to the V3 multi-vendor standard.  For
+    details on how to build  an ABI compliant compiler for GNU/Linux
+    systems, check the <a href="c++-abi.html">common C++ ABI page</a>.</li>
   </ul>
 
 
