--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -346,6 +346,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-cygwin</td>
+<td>Cygwin 1.3.12, Windows NT 5.0</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00477.html">3.1.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
 <td>Cygwin 1.3.12, Windows XP Pro 5.1</td>
 <td>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01288.html">3.1.1</a></td>
@@ -801,6 +808,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>sparc-unknown-linux-gnu</td>
+<td>Red Hat 6.2, glibc 2.2.5, kernel 2.4.17</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00297.html">3.1.1</a></td>
+</tr>
+
+<tr>
+<td>sparc-unknown-linux-gnu</td>
 <td>SuSE 7.3, glibc 2.2.4, kernel 2.4.14</td>
 <td>Successful (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01227.html">3.1</a>
@@ -817,6 +831,7 @@ Installing GCC: Final Installation</a>.</p>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00739.html">3.1.1</a>
 </td>
+</tr>
 
 <tr>
 <td>sparc64-sun-solaris2.8</td>
@@ -852,7 +867,6 @@ Installing GCC: Final Installation</a>.</p>
 <td>Debian GNU 3.0, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-07/msg01285.html">3.1.1</a></td>
-</tr>
 </tr>
 
 </table>
