* projects/beginner.html: Update.

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -1039,10 +1039,7 @@ them to GNATS or fix them.</p></li>
 
 <ul>
 
-<li>Implement <samp>-std</samp> for the C++ front end.  (Also Fortran,
-Java?)</li>
-<li>Add a <samp>-std</samp> value equivalent to
-<samp>-traditional</samp> to the C front end.</li>
+<li>Implement <samp>-std</samp> for the Fortran and Java front ends?</li>
 
 <li>Fix the places where <samp>-std=c89</samp> is not the same thing
 as <samp>-ansi</samp>.</li>
@@ -1221,12 +1218,11 @@ This should be used for "builtins" such as exit and
 abort that only exist for this purpose as well as for functions such
 as <code>malloc</code> handled by <code>special_function_p</code>.</p></li>
 
-<li>Move all flags shared between C and C++ to <code>c-common.[ch]</code>.
+<li>Find warnings that only the C front end does that would make sense
+with C++ and have the C++ front end support them as well, sharing code
+if possible.</li>
 
-<p>(Make sure that the flags in question are genuinely used in both
-front ends. When I [Joseph Myers] started looking at this, the first
-case I found was that <samp>-fcond-mismatch</samp> was ignored for C++ - so I
-documented that instead.)</p></li>
+<p>And vice versa.</p>
 
 <li>More generally, share more code between the C and C++ front ends.</li>
 
