--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -450,6 +450,16 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.1, glibc 2.2.2, kernel 2.4.2</td>
+<td>Successful (Ada, C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00556.html">3.1.1</a>
+<br />Successful (all):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00642.html">3.1.1</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.7</td>
 <td>Successful (C, C++, F77, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01286.html">3.1</a></td>
@@ -519,6 +529,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>SuSE 7.1, glibc 2.2.7, kernel 2.4.18</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-06/msg00675.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE 7.1, glibc 2.2-17, kernel 2.4.5</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00641.html">3.1.1</a></td>
 </tr>
 
 <tr>
@@ -745,7 +762,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.6</td>
 <td>non-standard boot flags</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02737.html">3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02737.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00648.html">3.1.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg01013.html">3.1</a>
 </td>
