--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -1,4 +1,8 @@
-<html>
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!DOCTYPE html 
+          PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
 <title>Build status for GCC 3.1</title>
@@ -535,7 +539,10 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>SuSE 7.1, glibc 2.2-17, kernel 2.4.5</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00641.html">3.1.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00641.html">3.1.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00354.html">3.1.1</a>
+</td>
 </tr>
 
 <tr>
