Add 3.1.1 entry for alphaev68-dec-osf5.1, and remove html header that was supposed to only be there temporarily for validation.

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -1,8 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<!DOCTYPE html 
-          PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html>
 
 <head>
 <title>Build status for GCC 3.1</title>
@@ -78,6 +74,16 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-07/msg00810.html">3.1.1</a>
+</td>
+</tr>
+
+<tr>
+<td>alphaev68-dec-osf5.1</td>
+<td>Tru64 UNIX 5.1A</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00769.html">3.1.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00416.html">3.1.1</a>
 </td>
 </tr>
 
