-fstrict-aliasing is now part of -O2.

--- a/htdocs/gcc-3.0/caveats.html
+++ b/htdocs/gcc-3.0/caveats.html
@@ -8,6 +8,13 @@
 <h1>GCC 3.0 Caveats</h1>
 
 <ul>
+  <li><code>-fstrict-aliasing</code> is now part of <code>-O2</code>
+  and higher optimization levels.  This allows the compiler to assume
+  the strictest aliasing rules applicable to the language being
+  compiled.  For C and C++, this activates optimizations based on the
+  type of expressions.  This optimization may thus break old,
+  non-compliant code.
+
   <li>Enumerations are now properly promoted to <code>int</code> in
   function parameters and function returns.  Normally this change is
   not visible, but when using <code>-fshort-enums</code> this is an
