Update notes for GCC .32

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -11,6 +11,12 @@
 <body>
 <h1>GCC 3.2 Changes, New Features, and Fixes</h1>
 
+<h2>Relase Notes</h2>
+
+<p>See <a
+href="http://gcc.gnu.org/ml/gcc/2002-08/msg00405.html">this message</a> for 
+a list of bugs fixed in this released.</p>
+
 <h2>Caveats</h2>
 
   <ul>
@@ -23,28 +29,34 @@
   </ul>
 
 
-<h2>General Optimizer Improvements</h2>
-
-  
 <h2>New Languages and Language specific improvements</h2>
 
 <h3>C++</h3>
 
   <ul>
-    <li>The C++ ABI now conforms to the V3 multi-vendor standard.  For
-    details on how to build  an ABI compliant compiler for GNU/Linux
-    systems, check the <a href="c++-abi.html">common C++ ABI page</a>.</li>
+    <li>There are now no known differences between the C++ ABI
+    implemented in GCC and the multi-vendor standard.  We believe that
+    the ABI for the C++ standard library is now stable and will not
+    change in future versions of the compiler.  However, hard
+    experience has taught us to be cautious; it is possible that more
+    problems will be found.  It is our intention to make changes to
+    the ABI only if they are necessary for correct compilation of C++,
+    as opposed to conformance to the ABI documents.</li>
+
+    <li>For details on how to build an ABI compliant compiler for
+    GNU/Linux systems, check the <a href="c++-abi.html">common C++ ABI
+    page</a>.</li>
   </ul>
 
 
 <h2>New Targets and Target Specific Improvements</h2>
 
-
-<h2>Documentation improvements</h2>
-
-
-<h2>Other significant improvements</h2>
-
+<h3>x86-64</h3>
+ 
+  <ul>
+   <li>A bug whereby the complier could generated bad code for
+       <code>bzero</code> has been fixed.<li>
+  </ul>
 
 </body>
 </html>
