--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -218,6 +218,7 @@ These are included in the sources for a release in INSTALL/specific.html,
 and the <a href="http://gcc.gnu.org/install/specific.html">latest version</a>
 is always available at the GCC web site.
 Reports of successful builds for GCC versions
+<a href="http://gcc.gnu.org/gcc-3.1/buildstat.html">3.1</a>,
 <a href="http://gcc.gnu.org/gcc-3.0/buildstat.html">3.0</a> and
 <a href="http://gcc.gnu.org/gcc-2.95/buildstat.html">2.95</a>
 are also available at the web site.</p>
