Make links to G77 manual go direct into current manual; avoid g77_bugs.html and g77_news.html links.

--- a/htdocs/egcs-1.1/fortran.html
+++ b/htdocs/egcs-1.1/fortran.html
@@ -8,10 +8,10 @@
 <p>This page is obsolete.</p>
 
 <p>Information on GNU Fortran (<code>g77</code>)
-<a href="../onlinedocs/g77_news.html">news</a> and
-<a href="../onlinedocs/g77_bugs.html">known bugs</a>
+<a href="http://gcc.gnu.org/onlinedocs/g77/News.html">news</a> and
+<a href="http://gcc.gnu.org/onlinedocs/g77/Trouble.html">known bugs</a>
 is updated daily from the main development sources, as is its
-<a href="../onlinedocs/g77_toc.html">documentation</a>.</p>
+<a href="http://gcc.gnu.org/onlinedocs/g77/">documentation</a>.</p>
 
 </body>
 </html>
