--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -125,7 +125,7 @@
     <li>Additional warning option <code>-Wfloat-equal</code>.</li>
     <li>Improvements to <code>-Wtraditional</code>.</li>
     <li>Fortran improvements are listed in
-        <a href="http://gcc.gnu.org/onlinedocs/g77_news.html">the Fortran
+        <a href="http://gcc.gnu.org/onlinedocs/g77/News.html">the Fortran
         documentation</a>.</li>
   </ul>
 
