--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -129,7 +129,7 @@
 
   <ul>
     <li>Fortran improvements are listed in              
-    <a href="http://gcc.gnu.org/onlinedocs/g77_news.html">
+    <a href="http://gcc.gnu.org/onlinedocs/g77/News.html">
     the Fortran documentation</a>.</li>
   </ul>
 
