--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -248,7 +248,7 @@ from the GCC source tree.
 
 <a href="news.html">Older news and announcements...</a>
 <br />
-<a href="http://gcc.gnu.org/onlinedocs/g77_news.html">Fortran news</a>
+<a href="http://gcc.gnu.org/onlinedocs/g77/News.html">Fortran news</a>
 
 </td>                                             <!-- end of right frame -->
 
