--- a/htdocs/egcs-1.1/features.html
+++ b/htdocs/egcs-1.1/features.html
@@ -9,7 +9,7 @@
 <ul>
   <li>Integrated GNU Fortran (<code>g77</code>) compiler and runtime library
   with improvements, based on
-  <a href="http://gcc.gnu.org/onlinedocs/g77_news.html"><code>g77</code>
+  <a href="http://gcc.gnu.org/onlinedocs/g77/News.html"><code>g77</code>
   version 0.5.23</a>.</li>
   <li>Vast improvements in the C++ compiler; so many they have 
   <a href="c++features.html">page of their own!</a></li>
