--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -240,7 +240,7 @@
 <h3>Fortran</h3>
 
 <p>Fortran improvements are listed in              
-<a href="http://gcc.gnu.org/onlinedocs/g77_news.html">the Fortran
+<a href="http://gcc.gnu.org/onlinedocs/g77/News.html">the Fortran
 documentation</a>.</p>
 
 <h3>Ada</h3>
