--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -123,8 +123,8 @@ existing release.</p>
          href="http://gcc.gnu.org/onlinedocs/g77.ps.gz">also in
          PostScript</a>)
   <ul> 
-     <li><a href="http://gcc.gnu.org/onlinedocs/g77_news.html">G77 News</a></li>
-     <li><a href="http://gcc.gnu.org/onlinedocs/g77_bugs.html">G77 Bugs</a></li>
+     <li><a href="http://gcc.gnu.org/onlinedocs/g77/News.html">G77 News</a></li>
+     <li><a href="http://gcc.gnu.org/onlinedocs/g77/Trouble.html">G77 Bugs</a></li>
   </ul>
          </li>
   <li><a href="http://gcc.gnu.org/onlinedocs/gcj/">GCJ Manual</a> (<a
