--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -147,7 +147,7 @@ and automated testers</a> to maintain and improve quality.</p>
   Open for all maintainers.
 </dd>
 
-<dt><strong>Current release series:</strong>
+<dt><strong>Previous release series:</strong>
   <a href="gcc-3.1/">GCC 3.1.1</a>
 </dt><dd>
   GCC 3.1.1 (released 2002-07-26) is the last 3.1 release;
@@ -155,10 +155,10 @@ and automated testers</a> to maintain and improve quality.</p>
   <a href="gcc-3.2/changes.html">GCC 3.2</a>-branch.
 </dd>
 
-<dt><strong>Pending release series:</strong>
-  <a href="gcc-3.2/changes.html">GCC 3.2</a> scheduled for early August 2002
+<dt><strong>Current release series:</strong>
+  <a href="gcc-3.2/changes.html">GCC 3.2</a> 
 </dt><dd>
-  Changes require approval by release manager.
+  Open for all maintainers; fixes for regressions only.
 </dd>
 
 <!--
@@ -189,6 +189,11 @@ and automated testers</a> to maintain and improve quality.</p>
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>August 14, 2002</b></dt>
+<dd>
+<a href="gcc-3.2/">GCC 3.2</a> has been released.
+</dd>
 
 <dt><b>July 26, 2002</b></dt>
 <dd>
