Add very first entry for 3.2:   i686-pc-linux-gnu (SuSE 7.1, glibc 2.2-17, binutils 2.13, kernel 2.4.5)

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -22,6 +22,16 @@ Installing GCC: Final Installation</a>.</p>
 
 <table>
 
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE 7.1, glibc 2.2-17, binutils 2.13, kernel 2.4.5</td>
+<td>Successful (C, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00900.html">3.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00483.html">3.2</a>
+</td>
+</tr>
+
 </table>
 
 </body>
