Add entry for 3.2:   sparc-sun-solaris2.7 Change a previous entry from i686 to i486.

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -23,6 +23,16 @@ Installing GCC: Final Installation</a>.</p>
 <table>
 
 <tr>
+<td>i486-pc-linux-gnu</td>
+<td>SuSE 8.0, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00907.html">3.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00469.html">3.2</a>
+</td>
+</tr>
+
+<tr>
 <td>i686-pc-linux-gnu</td>
 <td>SuSE 7.1, glibc 2.2-17, binutils 2.13, kernel 2.4.5</td>
 <td>Successful (C, Obj-C):
@@ -33,12 +43,12 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
-<td>i686-pc-linux-gnu</td>
-<td>SuSE 8.0, glibc 2.2.5, kernel 2.4.18</td>
-<td>Successful (C, C++, F77, Obj-C):
-<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00907.html">3.2</a>
+<td>sparc-sun-solaris2.7</td>
+<td>UltraSparc Workstation</td>
+<td>Successful (C, Obj-C; with tweak):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00924.html">3.2</a>
 <br />Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00469.html">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00490.html">3.2</a>
 </td>
 </tr>
 
