--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -793,6 +793,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparc-sun-solaris2.7</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00932.html">3.1.1</a></td>
+</tr>
+
+<tr>
 <td>sparc-sun-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77, Java, Obj-C):
