Fix a minor formatting error.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -55,7 +55,7 @@ a list of bugs fixed in this released.</p>
  
   <ul>
    <li>A bug whereby the complier could generated bad code for
-       <code>bzero</code> has been fixed.<li>
+       <code>bzero</code> has been fixed.</li>
   </ul>
 
 </body>
