Add entry for 3.2:   i686-pc-linux-gnu (Mandrake 8.0, glibc 2.2.4, kernel 2.4.3) plus several links to test results for 3.2.

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -23,12 +23,31 @@ Installing GCC: Final Installation</a>.</p>
 <table>
 
 <tr>
+<td>i386-unknown-freebsd4.6</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00464.html">3.2</a>
+</td>
+</tr>
+
+<tr>
 <td>i486-pc-linux-gnu</td>
 <td>SuSE 8.0, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful (C, C++, F77, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00907.html">3.2</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00469.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00489.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00492.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00497.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00500.html">3.2</a>
 </td>
 </tr>
 
@@ -44,11 +63,35 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Mandrake 8.0, glibc 2.2.4, kernel 2.4.3</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00940.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>SuSE 7.1, glibc 2.2-17, binutils 2.13, kernel 2.4.5</td>
 <td>Successful (C, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00900.html">3.2</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00483.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>ia64-suse-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00488.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.7</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00486.html">3.2</a>
 </td>
 </tr>
 
