--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -23,6 +23,50 @@ Installing GCC: Final Installation</a>.</p>
 <table>
 
 <tr>
+<td>alphaev56-unknown-linux-gnu</td>
+<td>Red Hat 7.1, glibc 2.2.3, kernel 2.4.3</td>
+<td>Successful (C, C++, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00951.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>alphaev67-dec-osf4.0f</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00969.html">3.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00528.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>hppa2.0w-hp-hpux11.00</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00969.html">3.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00526.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>hppa64-hp-hpux11.00</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00969.html">3.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00527.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-pc-solaris2.8</td>
+<td>binutils 2.11.2</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00963.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>i386-unknown-freebsd4.6</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -37,6 +81,16 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00907.html">3.2</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00469.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin (Athlon)</td>
+<td>Cygwin 1.3.12, Windows 2000 Pro 5.0</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00946.html">3.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00502.html">3.2</a>
 </td>
 </tr>
 
@@ -76,6 +130,26 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00900.html">3.2</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00483.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>ia64-unknown-linux-gnu</td>
+<td>Red Hat 7.1, glibc 2.2.4, kernel 2.4.9</td>
+<td>Successful (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00969.html">3.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00529.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>ia64-unknown-linux-gnu</td>
+<td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.18</td>
+<td>Successful (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00969.html">3.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00525.html">3.2</a>
 </td>
 </tr>
 
