Fix two typos, in response to mail to the GCC list.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -54,7 +54,7 @@ a list of bugs fixed in this released.</p>
 <h3>x86-64</h3>
  
   <ul>
-   <li>A bug whereby the complier could generated bad code for
+   <li>A bug whereby the compiler could generate bad code for
        <code>bzero</code> has been fixed.</li>
   </ul>
 
