Add entries for 3.2:   i386-pc-linux-gnu (Slackware 8.0, glibc 2.2.5, kernel 2.4.19)   i686-pc-sco3.2v5.0.6

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -67,6 +67,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i386-pc-linux-gnu</td>
+<td>Slackware 8.0, glibc 2.2.5, kernel 2.4.19</td>
+<td>Successful (C, C++, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00993.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>i386-unknown-freebsd4.6</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -131,6 +138,13 @@ Installing GCC: Final Installation</a>.</p>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00483.html">3.2</a>
 </td>
+</tr>
+
+<tr>
+<td>i686-pc-sco3.2v5.0.6</td>
+<td>SCO OpenServer 3.2 v5.0.6</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00985.html">3.2</a></td>
 </tr>
 
 <tr>
