--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -81,7 +81,7 @@ the source, you can avoid installing these build tools by running
 
 <p>There has been some discussion of removing these generated files
 from GCC's CVS source tree (there is no discussion of removing them
-from them from the released source tarballs).  If that happens then
+from the released source tarballs).  If that happens then
 building GCC from the CVS source tree would require installing 
 the above mentioned build tools.  Installing these build tools is not
 particularly difficult, but can be time consuming especially if you 
