Add entries for 3.2:   alpha-dec-osf4.0g   i686-pc-linux-gnu (custom; glibc 2.2.5, kernel 2.4.18)   i686-pc-linux-gnu (Red Hat 7.3, glibc 2.2.5, kernel 2.4.19)   powerpc-ibm-aix4.2.1.0   powerpc-ibm-aix4.3.3.0   sparc-sun-solaris2.7   sparc-unknown-linux-gnu

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -23,6 +23,13 @@ Installing GCC: Final Installation</a>.</p>
 <table>
 
 <tr>
+<td>alpha-dec-osf4.0g</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77, Java, with tweaks):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01082.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>alphaev56-unknown-linux-gnu</td>
 <td>Red Hat 7.1, glibc 2.2.3, kernel 2.4.3</td>
 <td>Successful (C, C++, Obj-C):
@@ -124,9 +131,24 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>custom; glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01097.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Mandrake 8.0, glibc 2.2.4, kernel 2.4.3</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00940.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.19</td>
+<td>Successful (Ada, C, C++, F77, Java, Obj-C):
+<a href="">3.2</a>
 </td>
 </tr>
 
@@ -176,10 +198,32 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-ibm-aix4.2.1.0</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01089.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>powerpc-ibm-aix4.3.3.0</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01090.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>sparc-sun-solaris2.7</td>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00486.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.7</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01022.html">3.2</a>
 </td>
 </tr>
 
@@ -211,6 +255,13 @@ Installing GCC: Final Installation</a>.</p>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00474.html">3.2</a>
 </td>
+</tr>
+
+<tr>
+<td>sparc-unknown-linux-gnu</td>
+<td>Debian 3.0, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01098.html">3.2</a></td>
 </tr>
 
 <tr>
