--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -205,10 +205,30 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-ibm-aix4.3.2.0</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01144.html">3.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00633.html">3.2</a>
+</td>
+</tr>
+
+<tr>
 <td>powerpc-ibm-aix4.3.3.0</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01090.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>powerpc-ibm-aix5.1.0.0</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01145.html">3.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00632.html">3.2</a>
+</td>
 </tr>
 
 <tr>
