Add missing link for i686-pc-linux-gnu entry added earlier today.

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -148,7 +148,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.19</td>
 <td>Successful (Ada, C, C++, F77, Java, Obj-C):
-<a href="">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01000.html">3.2</a>
 </td>
 </tr>
 
