--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -57,6 +57,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>hppa2.0w-hp-hpux11.00</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01171.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>hppa64-hp-hpux11.00</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77):
@@ -198,6 +205,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>mips-sgi-irix6.5</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01171.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>powerpc-ibm-aix4.2.1.0</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++):
@@ -255,6 +269,13 @@ Installing GCC: Final Installation</a>.</p>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00490.html">3.2</a>
 </td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.8</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01171.html">3.2</a></td>
 </tr>
 
 <tr>
