* index.html: Mention inliner.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -74,6 +74,11 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>August 16, 2002</b>
+</td><td>
+Andrew Haley updated the gcc tree-based inliner to work for gcj.
+</td></tr>
+
 <b>July 25, 2002</b>
 </td><td>
 Kaz Kojima has implemented the necessary support in FFI and libjava
